# backend/app/Http/Requests/MaterialRequest.php
@@ -1,0 +1,31 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class MaterialRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'subject_id'    => 'required|integer|exists:subjects,id',
+            'title'         => 'required|string|regex:/^[\p{L}\s\-]+$/u',
+            'content_text'  => 'required|min:200',
+            'difficulty'    => 'required|in:easy,medium,hard'
+        ];
+    }
+}
